--- a/requirements.txt
+++ b/requirements.txt
@@ -8,6 +8,7 @@ channels_redis==4.2.1
 constantly==23.10.4
 cryptography==45.0.5
 daphne==4.2.1
+dj-database-url==3.0.1
 Django==5.2.4
 djangorestframework==3.16.0
 hyperlink==21.0.0
@@ -16,6 +17,7 @@ incremental==24.7.2
 msgpack==1.1.1
 phonenumbers==9.0.8
 pillow==11.3.0
+psycopg==3.2.9
 pyasn1==0.6.1
 pyasn1_modules==0.4.2
 pycparser==2.22
